# telegram-bot-test

./: Dockerfile  README.md  custom_exceptions.py  docker-compose.yml  example_env  handlers.py  main.py  migration.py  pyproject.toml  routing.py  settings.py
adapters/repositories/: __init__.py  currency.py  exchange_request.py  repository.py  user.py  user_balances.py
adapters/services/: __init__.py  external_price_service.py
entities/: __init__.py  dto.py  entities.py
tests/: conftest.py
tests/test_interactors/: test_exchange.py  test_exhcange_request.py  test_report.py  test_start.py  test_uncategorized.py
use_cases/: __init__.py  exchange_request.py  interactor.py  report.py  start.py  uncategorized.py
utils/: database.py  migration.py
